{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 2618,
  "lineage": "2d56c8b1-2238-478d-dbac-f01c32d16fc9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008bf6af97e779804",
            "arn": "arn:aws:ec2:us-west-2:550017254839:elastic-ip/eipalloc-008bf6af97e779804",
            "association_id": "eipassoc-0c9eb9035fb63eeba",
            "domain": "vpc",
            "id": "eipalloc-008bf6af97e779804",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0fc39ca79be256fcb",
            "private_dns": "ip-10-0-2-154.us-west-2.compute.internal",
            "private_ip": "10.0.2.154",
            "public_dns": "ec2-44-232-161-64.us-west-2.compute.amazonaws.com",
            "public_ip": "44.232.161.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "frauddetectiondemo-aws-eip-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-aws-eip-2846d540"
            },
            "vpc": true
          },
          "dependencies": [
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "oracle_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-027951e78de46a00e",
            "arn": "arn:aws:ec2:us-west-2:550017254839:instance/i-0c42e1665ff8e11f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c42e1665ff8e11f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "frauddetectiondemo-key-2846d540",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03101107cd698237f",
            "private_dns": "ip-10-0-1-25.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.25",
            "public_dns": "ec2-54-212-246-11.us-west-2.compute.amazonaws.com",
            "public_ip": "54.212.246.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d5d2c7dd3868f193",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-018021f4548770a22"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e77a73c01053f14",
            "tags": {
              "Event": "Current2025",
              "Name": "frauddetectiondemo-oracle-xe",
              "Owner_email": "azamzam@confluent.io"
            },
            "tags_all": {
              "Event": "Current2025",
              "Name": "frauddetectiondemo-oracle-xe",
              "Owner_email": "azamzam@confluent.io"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-018021f4548770a22"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf_key",
            "aws_security_group.allow_ssh_oracle",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id",
            "tls_private_key.rsa-4096-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "windows_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d31ac04c1d894d66",
            "arn": "arn:aws:ec2:us-west-2:550017254839:instance/i-00ba82795af340fbe",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-00ba82795af340fbe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "frauddetectiondemo-key-2846d540",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "password_data": "PVQ9JKchrY+fkpfu2JJy90hNQRADHo+CkrAWJdvgeWTUvY9aE4uhXbWpB2sjp3zF9SAt1TMzFHItyii5xZKMGxNCNMsnIOmagnRasemIE5WXplvojxzuhnfZTF132TmdmceKycqrSKYbBCYLJSpt4wfp+YZBzQ2rBE2Cby8DqgveudI9SDq1q0ncQqk++cN4JAEfb40S4pnXq06HAf4WNEOokbUok/xny4CYIyWXuT6oNSdyfIFbjYP8Tfh8XEI6telUSBafer3nc5rvVIq8U0A+juTs+3tVzFz/GFJqP+Ny2lqeAmHM+fyN+taFx6NsnWXAMwcKoLVE6qz4TChhVGBzOO98L2OqG59wBXHnB4SEV/CBrraRdEpP71gdUulReZjJLjD9ps7EpBtT+bfwYmkkofsPmwQMGqkZRZ7tBQyygrX4VAYjTGW8or7Nv2NqOcsxfw2kjW6UbssNdYxeLc [...]
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067bbc43537d8d5d1",
            "private_dns": "ip-10-0-1-103.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.103",
            "public_dns": "ec2-34-219-140-94.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.140.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a588a7ba91bf23e3",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e77a73c01053f14",
            "tags": {
              "Name": "frauddetectiondemo-windows-instance-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-windows-instance-2846d540"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0bb7652954661ffb8"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_db_instance.oracle_db",
            "aws_db_subnet_group.db_subnet_group",
            "aws_key_pair.tf_key",
            "aws_security_group.db_sg",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.windows",
            "random_id.env_display_id",
            "tls_private_key.rsa-4096-example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:internet-gateway/igw-075ac9477dba5e238",
            "id": "igw-075ac9477dba5e238",
            "owner_id": "550017254839",
            "tags": {
              "Name": "frauddetectiondemo-internet-gateway-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-internet-gateway-2846d540"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rds_oracle_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:550017254839:loadbalancer/net/frauddetectiondemo-nlb-2846d540/4a5ed99401f5f7b2",
            "arn_suffix": "net/frauddetectiondemo-nlb-2846d540/4a5ed99401f5f7b2",
            "dns_name": "frauddetectiondemo-nlb-2846d540-4a5ed99401f5f7b2.elb.us-west-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:550017254839:loadbalancer/net/frauddetectiondemo-nlb-2846d540/4a5ed99401f5f7b2",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "frauddetectiondemo-nlb-2846d540",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06a699a9a62c0b2bd"
              },
              {
                "subnet_id": "subnet-0d380b63a2cb2392a"
              },
              {
                "subnet_id": "subnet-0f6c3a8f9bff7b712"
              }
            ],
            "subnets": [
              "subnet-06a699a9a62c0b2bd",
              "subnet-0d380b63a2cb2392a",
              "subnet-0f6c3a8f9bff7b712"
            ],
            "tags": {
              "Name": "frauddetectiondemo-rds-oracle-nlb-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-rds-oracle-nlb-2846d540"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55",
            "zone_id": "Z18D5FSROUN65G"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "rds_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:550017254839:listener/net/frauddetectiondemo-nlb-2846d540/4a5ed99401f5f7b2/15b5818f7a5dc9b9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:550017254839:targetgroup/frauddetectiondemo-tg-2846d540/01a8fcbfe3daa942",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:550017254839:listener/net/frauddetectiondemo-nlb-2846d540/4a5ed99401f5f7b2/15b5818f7a5dc9b9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:550017254839:loadbalancer/net/frauddetectiondemo-nlb-2846d540/4a5ed99401f5f7b2",
            "mutual_authentication": [],
            "port": 1521,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": {
              "Name": "frauddetectiondemo-rds-oracle-lb-listener-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-rds-oracle-lb-listener-2846d540"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.rds_oracle_nlb",
            "aws_lb_target_group.rds_oracle_target_group",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "rds_oracle_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:550017254839:targetgroup/frauddetectiondemo-tg-2846d540/01a8fcbfe3daa942",
            "arn_suffix": "targetgroup/frauddetectiondemo-tg-2846d540/01a8fcbfe3daa942",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:550017254839:targetgroup/frauddetectiondemo-tg-2846d540/01a8fcbfe3daa942",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:550017254839:loadbalancer/net/frauddetectiondemo-nlb-2846d540/4a5ed99401f5f7b2"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frauddetectiondemo-tg-2846d540",
            "port": 1521,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "frauddetectiondemo-rds-oracle-target-group-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-rds-oracle-target-group-2846d540"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "rds_oracle_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:550017254839:targetgroup/frauddetectiondemo-tg-2846d540/01a8fcbfe3daa942-20250228234845977000000011",
            "port": 1521,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:550017254839:targetgroup/frauddetectiondemo-tg-2846d540/01a8fcbfe3daa942",
            "target_id": "10.0.11.249"
          },
          "dependencies": [
            "aws_db_instance.oracle_db",
            "aws_db_subnet_group.db_subnet_group",
            "aws_lb_target_group.rds_oracle_target_group",
            "aws_security_group.db_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "data.dns_a_record_set.rds_dynamic_ip",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-008bf6af97e779804",
            "association_id": "eipassoc-0c9eb9035fb63eeba",
            "connectivity_type": "public",
            "id": "nat-07e5413746a82a03d",
            "network_interface_id": "eni-0fc39ca79be256fcb",
            "private_ip": "10.0.2.154",
            "public_ip": "44.232.161.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04b27f1e98710a9b3",
            "tags": {
              "Name": "frauddetectiondemo-nat-gateway-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-nat-gateway-2846d540"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:route-table/rtb-0da634dffaeb7d131",
            "id": "rtb-0da634dffaeb7d131",
            "owner_id": "550017254839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07e5413746a82a03d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "frauddetectiondemo-private-route-table-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-route-table-2846d540"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:route-table/rtb-01426eddc899038cc",
            "id": "rtb-01426eddc899038cc",
            "owner_id": "550017254839",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075ac9477dba5e238",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "frauddetectiondemo-public-route-table-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-route-table-2846d540"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddaa121080f7eea8",
            "route_table_id": "rtb-0da634dffaeb7d131",
            "subnet_id": "subnet-0f6c3a8f9bff7b712"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a6645c85650b60",
            "route_table_id": "rtb-0da634dffaeb7d131",
            "subnet_id": "subnet-06a699a9a62c0b2bd"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07622b0dcc56ea96c",
            "route_table_id": "rtb-0da634dffaeb7d131",
            "subnet_id": "subnet-0d380b63a2cb2392a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04738c152fea5b3b4",
            "route_table_id": "rtb-01426eddc899038cc",
            "subnet_id": "subnet-09e77a73c01053f14"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00694d4911d1ea2f1",
            "route_table_id": "rtb-01426eddc899038cc",
            "subnet_id": "subnet-04b27f1e98710a9b3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0772647120807ab54",
            "route_table_id": "rtb-01426eddc899038cc",
            "subnet_id": "subnet-01d76f82a2287974d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_oracle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:security-group/sg-018021f4548770a22",
            "description": "Allow SSH and Oracle inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018021f4548770a22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Oracle EM Express access",
                "from_port": 5500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5500
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Oracle SQL*Net access",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frauddetectiondemo_allow_ssh_oracle",
            "name_prefix": "",
            "owner_id": "550017254839",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frauddetectiondemo-oracle-sg"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-oracle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:security-group/sg-00a9ba8de013e4a80",
            "description": "Allow RDS Oracle access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a9ba8de013e4a80",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 1521,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1521
              }
            ],
            "name": "frauddetectiondemo-db-sg-2846d540",
            "name_prefix": "",
            "owner_id": "550017254839",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frauddetectiondemo-db-sg-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-db-sg-2846d540"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:security-group/sg-02889ac1e7a8283cf",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02889ac1e7a8283cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bb7652954661ffb8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "frauddetectiondemo-aws-security-group-2846d540",
            "name_prefix": "",
            "owner_id": "550017254839",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frauddetectiondemo-security-group-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-security-group-2846d540"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.windows_sg",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "windows_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:security-group/sg-0bb7652954661ffb8",
            "description": "Allow RDP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb7652954661ffb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5985,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5986
              }
            ],
            "name": "frauddetectiondemo-windows-sg-2846d540",
            "name_prefix": "",
            "owner_id": "550017254839",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frauddetectiondemo-windows-sg-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-windows-sg-2846d540"
            },
            "timeouts": null,
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "self_ingress_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-400333056",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02889ac1e7a8283cf",
            "security_group_rule_id": "sgr-0981a873c5d15c972",
            "self": false,
            "source_security_group_id": "sg-02889ac1e7a8283cf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg",
            "aws_security_group.windows_sg",
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:subnet/subnet-0f6c3a8f9bff7b712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6c3a8f9bff7b712",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550017254839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-private-0-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-0-2846d540"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:subnet/subnet-06a699a9a62c0b2bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a699a9a62c0b2bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550017254839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-private-1-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-1-2846d540"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:subnet/subnet-0d380b63a2cb2392a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d380b63a2cb2392a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "550017254839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-private-2-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-private-2-2846d540"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:subnet/subnet-09e77a73c01053f14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e77a73c01053f14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550017254839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-public-0-2846d540",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-0-2846d540",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:subnet/subnet-04b27f1e98710a9b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b27f1e98710a9b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550017254839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-public-1-2846d540",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-1-2846d540",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:subnet/subnet-01d76f82a2287974d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d76f82a2287974d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550017254839",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "frauddetectiondemo-public-2-2846d540",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-public-2-2846d540",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_vpc.main",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:vpc/vpc-0880871ddaa7e8e55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3df09a0f3d73c99",
            "default_route_table_id": "rtb-0bb24df3f98129fb5",
            "default_security_group_id": "sg-0b7ec920967bceb6f",
            "dhcp_options_id": "dopt-03101b97c2f15e2eb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0880871ddaa7e8e55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bb24df3f98129fb5",
            "owner_id": "550017254839",
            "tags": {
              "Name": "frauddetectiondemo-vpc-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-vpc-2846d540"
            }
          },
          "dependencies": [
            "random_id.env_display_id"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "privatelink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:550017254839:vpc-endpoint/vpce-09b5fb93dddecf774",
            "dns_entry": [
              {
                "dns_name": "vpce-09b5fb93dddecf774-dro6hb1j.vpce-svc-06a0af73877f48196.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-09b5fb93dddecf774-dro6hb1j-us-west-2a.vpce-svc-06a0af73877f48196.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-09b5fb93dddecf774-dro6hb1j-us-west-2b.vpce-svc-06a0af73877f48196.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-09b5fb93dddecf774-dro6hb1j-us-west-2c.vpce-svc-06a0af73877f48196.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09b5fb93dddecf774",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0466995c7b8d6381b",
              "eni-05852ae543774a066",
              "eni-0a86f0f82db92d44c"
            ],
            "owner_id": "550017254839",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-02889ac1e7a8283cf"
            ],
            "service_name": "com.amazonaws.vpce.us-west-2.vpce-svc-06a0af73877f48196",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.64",
                "subnet_id": "subnet-0f6c3a8f9bff7b712"
              },
              {
                "ipv4": "10.0.11.5",
                "subnet_id": "subnet-06a699a9a62c0b2bd"
              },
              {
                "ipv4": "10.0.12.92",
                "subnet_id": "subnet-0d380b63a2cb2392a"
              }
            ],
            "subnet_ids": [
              "subnet-06a699a9a62c0b2bd",
              "subnet-0d380b63a2cb2392a",
              "subnet-0f6c3a8f9bff7b712"
            ],
            "tags": {
              "Name": "frauddetectiondemo-confluent-private-link-endpoint-2846d540"
            },
            "tags_all": {
              "Name": "frauddetectiondemo-confluent-private-link-endpoint-2846d540"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0880871ddaa7e8e55"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_security_group.windows_sg",
            "aws_subnet.private_subnets",
            "aws_vpc.main",
            "confluent_environment.staging",
            "confluent_private_link_attachment.pla",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_class",
      "name": "fraud_demo_load_balancer_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "alb",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app.kubernetes.io/name": "LoadBalancerController"
                },
                "name": "alb",
                "resource_version": "1371",
                "uid": "ddd1fca5-c213-4b9f-baf6-d4f30a42cc2b"
              }
            ],
            "spec": [
              {
                "controller": "eks.amazonaws.com/alb",
                "parameters": []
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_caller_identity.current",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "fraud_demo_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "frauddemo/ingress-fraud-demo",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "ingress-fraud-demo",
                "namespace": "frauddemo",
                "resource_version": "3937",
                "uid": "c30e8b19-b1af-44d7-a26f-f6e0e4fe8b6b"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "alb",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "service-fraud-demo",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/*",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "k8s-frauddem-ingressf-138098743c-591167437.us-west-2.elb.amazonaws.com",
                        "ip": ""
                      }
                    ]
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": true
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_db_instance.oracle_db",
            "aws_db_subnet_group.db_subnet_group",
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_security_group.db_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_caller_identity.current",
            "kubernetes_config_map.fraud_demo_config",
            "kubernetes_deployment.fraud_demo",
            "kubernetes_ingress_class.fraud_demo_load_balancer_controller",
            "kubernetes_namespace.demo_namespace",
            "kubernetes_service.fraud_demo_service",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "demo_namespace",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "frauddemo",
            "metadata": [
              {
                "generation": 0,
                "name": "frauddemo",
                "resource_version": "1372",
                "uid": "c47dd562-248e-4347-96ff-b4dbecf39ce6"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_caller_identity.current",
            "random_id.env_display_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "fraud_demo_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "frauddemo/service-fraud-demo",
            "metadata": [
              {
                "generation": 0,
                "name": "service-fraud-demo",
                "namespace": "frauddemo",
                "resource_version": "3910",
                "uid": "311638be-8c3e-4462-a0f5-4b1a37148a02"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.30.103",
                "cluster_ips": [
                  "172.20.30.103"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 32113,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "fraud-demo"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "aws_db_instance.oracle_db",
            "aws_db_subnet_group.db_subnet_group",
            "aws_eks_access_policy_association.caller_cluster_admin_policy",
            "aws_eks_cluster.eks_cluster",
            "aws_iam_role.cluster",
            "aws_iam_role.node",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSBlockStoragePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSComputePolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSLoadBalancingPolicy",
            "aws_iam_role_policy_attachment.cluster_AmazonEKSNetworkingPolicy",
            "aws_security_group.db_sg",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_caller_identity.current",
            "kubernetes_config_map.fraud_demo_config",
            "kubernetes_deployment.fraud_demo",
            "kubernetes_namespace.demo_namespace",
            "random_id.env_display_id"
          ]
        }
      ]
    }
  ]
}